[package]
name = "tic_tac_toe_ws"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "*", features = ["macros", "ws"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tokio = { version = "*", features = ["full"] }
rand = "*"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
futures = "0.3"
num-format = "0.4.4"